Use mui text area and fix spacing

--- a/src/App/Header/style.scss
+++ b/src/App/Header/style.scss
@@ -6,4 +6,8 @@
   color: $white;
   display: flex;
   justify-content: space-between;
+  padding: 1em;
+  h1 {
+    margin: 0;
+  }
 }
